# hybrid_programming

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: CI.yml  python-publish.yml
docs/source/: api.rst  conf.py  env.md  github_actions.md  index.md  pypi.md  pytest.md  scbuild.md  test.md  vscode.md
include/: Ising.hpp  example.hpp
src/example_lib/: example.cpp
src/hybrid_example/: CMakeLists.txt  Ising.py  Ising_export.cpp  __init__.py  example_export.cpp
test/: CMakeLists.txt  test.cpp  test.py
